--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/sfdenver/savvy-coders-portfolio1.git"
+        "url": "git+https://github.com/sfdenver/capstone.git"
     },
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/sfdenver/savvy-coders-portfolio1/issues"
+        "url": "https://github.com/capstone/issues"
     },
-    "homepage": "https://github.com/sfdenver/savvy-coders-portfolio1#readme",
+    "homepage": "https://github.com/sfdenver/capstone#readme",
     "devDependencies": {
         "eslint": "^6.0.1",
         "parcel-bundler": "^1.12.3"
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "express": "^4.17.1",
         "lodash": "^4.17.15",
-        "navigo": "^7.1.2"
+        "mongoose": "^5.6.9",
+        "navigo": "^7.1.2",
+        "nodejs": "0.0.0"
     }
 }
